# framework.multimedia.libmm-player

./: AUTHORS  configure.ac  libmm-player.manifest
mobile/src/: mm_player.c  mm_player_attrs.c  mm_player_capture.c  mm_player_ini.c  mm_player_pd.c  mm_player_priv.c  mm_player_utils.c
mobile/src/include/: mm_player.h  mm_player_ini.h  mm_player_priv.h  mm_player_utils.h
packaging/: libmm-player.spec
src/: Makefile.am  mm_player.c  mm_player_asm.c  mm_player_attrs.c  mm_player_audioeffect.c  mm_player_capture.c  mm_player_es.c  mm_player_ini.c  mm_player_pd.c  mm_player_priv.c  mm_player_streaming.c  mm_player_tracks.c  mm_player_utils.c
src/include/: mm_player.h  mm_player_asm.h  mm_player_audioeffect.h  mm_player_es.h  mm_player_ini.h  mm_player_priv.h  mm_player_streaming.h  mm_player_utils.h
wearable/: configure.ac
wearable/src/: Makefile.am  mm_player.c  mm_player_asm.c  mm_player_attrs.c  mm_player_audioeffect.c  mm_player_capture.c  mm_player_ini.c  mm_player_pd.c  mm_player_plugin_loader.c  mm_player_priv.c  mm_player_streaming.c  mm_player_tracks.c  mm_player_utils.c
wearable/src/include/: mm_player.h  mm_player_asm.h  mm_player_audioeffect.h  mm_player_ini.h  mm_player_internal.h  mm_player_plugin_loader.h  mm_player_priv.h  mm_player_streaming.h  mm_player_tracks.h  mm_player_utils.h
wearable/test/: Makefile.am  mm_player_testsuite.c
