#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.61)
AC_INIT([libmm-player],[0.0.1])
AC_CONFIG_SRCDIR([src/mm_player_priv.c])
AC_CONFIG_HEADER([config.h])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_FUNC_SELECT_ARGTYPES
AC_FUNC_STAT
AC_FUNC_VPRINTF
AC_HEADER_STDBOOL
AC_HEADER_STDC
AC_HEADER_TIME
AC_PROG_GCC_TRADITIONAL

# Checks for libraries.

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h syslog.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_CONST
AC_TYPE_INT64_T
AC_HEADER_TIME

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_STAT
AC_CHECK_FUNCS([gettimeofday memset strchr strstr])

PKG_CHECK_MODULES(MMCOMMON,mm-common)
AC_SUBST(MMCOMMON_CFLAGS)
AC_SUBST(MMCOMMON_LIBS)

PKG_CHECK_MODULES(MMSOUND,mm-sound)
AC_SUBST(MMSOUND_CFLAGS)
AC_SUBST(MMSOUND_LIBS)

PKG_CHECK_MODULES(GLIB, glib-2.0)
AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

PKG_CHECK_MODULES(GST, gstreamer-0.10 >= 0.10)
AC_SUBST(GST_CFLAGS)
AC_SUBST(GST_LIBS)

PKG_CHECK_MODULES(GST_PLUGIN_BASE, gstreamer-plugins-base-0.10 >= 0.10)
AC_SUBST(GST_PLUGIN_BASE_CFLAGS)
AC_SUBST(GST_PLUGIN_BASE_LIBS)

PKG_CHECK_MODULES(GST_INTERFACE, gstreamer-interfaces-0.10 >= 0.10)
AC_SUBST(GST_INTERFACE_CFLAGS)
AC_SUBST(GST_LIBS)

PKG_CHECK_MODULES(GST_APP, gstreamer-app-0.10 >= 0.10)
AC_SUBST(GST_APP_CFLAGS)
AC_SUBST(GST_APP_LIBS)

PKG_CHECK_MODULES(APPFWK, appcore-efl)
AC_SUBST(APPFWK_CFLAGS)
AC_SUBST(APPFWK_LIBS)

PKG_CHECK_MODULES(ELEMENTARY, elementary)
AC_SUBST(ELEMENTARY_CFLAGS)
AC_SUBST(ELEMENTARY_LIBS)

PKG_CHECK_MODULES(MMSESSION, mm-session)
AC_SUBST(MMSESSION_CFLAGS)
AC_SUBST(MMSESSION_LIBS)

# for testsuite
PKG_CHECK_MODULES(MMUTIL, mmutil-imgp)
AC_SUBST(MMUTIL_CFLAGS)
AC_SUBST(MMUTIL_LIBS)

PKG_CHECK_MODULES(AUDIOSESSIONMGR, audio-session-mgr)
AC_SUBST(AUDIOSESSIONMGR_CFLAGS)
AC_SUBST(AUDIOSESSIONMGR_LIBS)

PKG_CHECK_MODULES(ECORE_X, ecore-x)
AC_SUBST(ECORE_X_CFLAGS)
AC_SUBST(ECORE_X_LIBS)

PKG_CHECK_MODULES(EVAS, evas)
AC_SUBST(EVAS_CFLAGS)
AC_SUBST(EVAS_LIBS)

PKG_CHECK_MODULES(ECORE, ecore)
AC_SUBST(ECORE_CFLAGS)
AC_SUBST(ECORE_LIBS)

PKG_CHECK_MODULES(INIPARSER, iniparser)
AC_SUBST(INIPARSER_CFLAGS)
AC_SUBST(INIPARSER_LIBS)

PKG_CHECK_MODULES(VCONF, vconf)
AC_SUBST(VCONF_CFLAGS)
AC_SUBST(VCONF_LIBS)

PKG_CHECK_MODULES(ICU, icu-i18n)
AC_SUBST(ICU_CFLAGS)
AC_SUBST(ICU_LIBS)

PKG_CHECK_MODULES(UTILX, utilX)
AC_SUBST(UTILX_CFLAGS)
AC_SUBST(UTILX_LIBS)

AC_CONFIG_FILES([Makefile
		 src/Makefile
		 mm-player.pc
])
AC_OUTPUT
